--- a/index.html
+++ b/index.html
@@ -1,94 +1,156 @@
-﻿<!DOCTYPE html> <html lang="en-us">
-<head> 
-	<title>Agape Justice</title>
-
-	<meta charset="UTF-8"/>
+﻿<!DOCTYPE html> 
+<html>
+<head>
+	<meta charset=UTF-8/>
 	<meta name="viewport"
-	content="width=device-width" scale"1.0"/>
+	content="width=device-width" scale="1.0"/>
 	<meta name="author"
 	content="Agape Justice"/>
-	<link rel="stylesheet" href="css/index.css">
-</head>
+	
+	<title>
+	Agape Justice-x
+	</title>
+	<link rel="stylesheet" href="style.css">
 
+
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
 
-<!----LOGO---->
 
-<h1>Agape Justice</h1>
+<!---------------------------------Navbar Section---------------------------->
 
-<!----Navigation/ menu bars start here---->
+<div class="navbar">
+	<div class="logo">
+		<h2>Agape <span>Justice</span>-x</h2>
+	</div>
 
-<div class="menu">
+
+	<div class="navlist">
+
 	<ul>
-		<li><a href="#">HOME</a></li>
-		<li><a href="#ser">SERVICES</a></li>
-		<li><a href="#contact">CONTACT</a></li>
+		<li> <a href="#home">HOME</a></li>
+		<li> <a href="#about">ABOUT</a></li>
+		<li> <a href="#service">SERVICES</a></li>
+		<li> <a href="#contact">CONTACT</a></li>
+
 	</ul>
-</div>
+	</div>	
 
 
+	<div class="dropdown">
+		 <li class="menu"> <a> <i class="fa-sharp fa-solid fa-bars" ></a></i>
 
-<!----Home Section start here---->
-<div class="Home">
-	<div class="Hero">
-		<div class="man">
-		<img src="images/man.jpg">
-		</div>
-		<p> Hello My Name Is </p> 
-		<h2>Agape <span>Justice</span> </h2>
+		<div class="dropdown-content">
+			<ul>
+				<li> <a href="#home">HOME</a></li>
+				<li> <a href="#about">ABOUT</a></li>
+				<li> <a href="#service">SERVICES</a></li>
+				<li> <a href="#contact">CONTACT</a></li>
+
+			</ul>
+	
+		</div>	
+
 
 	</div>
 
-	
 </div>
 
 
 
 
-<!----services start here---->
-<div class="services">
-	<h2 id="ser"> SERVICES</h2>
-	<p> We are a Team of Business Know for high Quality Services </p>
+<!--------------------------------Home Section----------------------------->
+
+<div class="home"id="home">
+
+	<div class="text">
+	<p>Hello My Name Is</p> 
+	<h2>Agape<span> Justice</span></h2>
+	<p><span><b>Frontend Developer,</b></span> with Knowledge in web development<br> and design,
+	I offer the best projects resulting in quality work.</p>
+	<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Send Me A Dm</a></button>
+	</div>
+	<div class="hero">
+		<img src="image/man1.png">
+	</div>
+
+</div>
+
+
+
+
+<!--------------------------------About us ---------------------------->
+
+<div class="about" id="about">
+	<div class="second">
+		<img src="image/man2.png">
+	</div>
+	<div class="about-text">
+		<h2> About Me</h2>
+		<h5>Develope <span>& Designer</span>
+		<p> I am a front-end web developer. I can provide clean and pixel
+		perfect design. I also make the website more & more interactive with 
+		web animations. I can provide clean code and pixel perfect design. I 
+		also make the website more & more interactive with web animations. A
+		responsive design makes your website accessible to user, regardless 
+		of their device. <br>
+		<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Message Me</a></button>
+	</div>
+
+</div>
+
+<!--------------------------------Services Section Start here------------------------->
+<div class="service" id="service">
+	<h2>SERVICES</h2>
 	<div class="container">
 		<div class="card">
-			<p>
 			<h3> GRAPHICS DESIGNER</h3>
+			<p>
 			we are the best in graphics designing  with high qaulity images and background,
 			we also offer free services to our constant customers  we also specialize on logo creation, Brochure Designs,
 			Media Printing,Invitation card, Letter Head Wedding Card, Business Card etc
 			</p>
+			<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Message ME</a></button>
 		</div>
 
 		<div class="card">
-			<p>
 			<h3> WEB DEVELOPER</h3>
-			We Collaborate  with Tzedek multi-Media to Create and and develop awesome website for individuals, companys, Affiliate Marketers, 
+				<div class="pra">
+			<p>
+			We Collaborate  with Tzedek multi-Media to Create and develope awesome website for individuals, companys, Affiliate Marketers, 
 			Bloggers etc our professional sites includes portfolios, Landing page, Blog, Interpersonal Sites, Gaming Sites, Chatbox, Lucrative Site, etc 
 			</p>
+				</div>
+			<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Message ME</a></button>
 		</div>
-			<div class="card">
-			<p> 
+			<div class="card"> 
 			<h3>ADVERT ANIMATOR</h3>
+			<p>
 			We specialze also in Advert Animation such as 3D Animation, White board animation, Emphasis animaton, video clip, informer animation, 
 			editable animation, luractive animation, welome presenter animation etc  Note we also give free animation/cartons to our constant customers
 			</p>
+			<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Message ME</a></button>
 		</div>
 	</div>
 
+
 </div>
 
-<div class="footer">
-	<h2 id="contact">CONTACT</h2>
+<!--------------------------------Contact Section Start here------------------------->
+<div class="footer" id="contact">
+
+	<h2>CONTACT</h2>
 		<div class="tel">
 			<p>
-			Tel: +234(0)8166873985 <br>
-			Email: ifunanyajusticew6@gmail.com 
+			<span><b>Tel:</b></span> +234(0)8166873985 <br>
+			<span><b>Email:</b></span> ifunanyajusticew6@gmail.com 
 			</p>
-			<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank">Message Via Email</a></button>
+			<button><a href= "mailto:ifunanyajusticew6@gmail.com" target="_blank"> Email Me</a></button>
+			<button><a href= "https://wa.me/+2348166873985" target="_blank">WhatsApp Me</a></button>
 
 		</div>
 </div>
 
 </body>
 </html>
-
